@@ -1,7 +1,7 @@
 /* -*- mode: objc -*-
  Project: DataBasin
  
- Copyright (C) 2016 Free Software Foundation
+ Copyright (C) 2016-2017 Free Software Foundation
  
  Author: Riccardo Mottola
  
@@ -321,38 +321,7 @@
   [file writeData: data];
 }
 
-- (void)writeDataSet:(NSArray *)array
-{
-  NSUInteger i;
-  NSUInteger setCount;
-  NSAutoreleasePool *arp;
-  
-  if (array == nil)
-    return;
-  
-  arp = [[NSAutoreleasePool alloc] init];
-  setCount = [array count];
-  for (i = 0; i < setCount; i++)
-    {
-      NSString *oneLine;
-      NSData *data;
-      NSData *data2;
-      id o;
 
-//      NSLog(@"write data set");
-      o = [array objectAtIndex:i];
-      if ([o isKindOfClass: [DBSObject class]])
-	o = [NSArray  arrayWithObject: o];
-      oneLine = [self formatOneLine:o forHeader:NO];
-      data = [oneLine dataUsingEncoding: encoding];
-      if (bomLength > 0)
-	data2 = [NSData dataWithBytesNoCopy: (void *)[data bytes] length: [data length]-bomLength freeWhenDone: NO];
-      else
-	data2 = data;
-      [file writeData: data2];
-    }
-  [arp release];
-}
 
 - (NSString *)formatOneLine:(id)data forHeader:(BOOL) headerFlag
 {
