@@ -4,6 +4,16 @@
 	* DBCSVWriter.m
 	* DBFileWriter.h
 	* DBFileWriter.m
+	* DBHTMLWriter.h
+	* DBHTMLWriter.m
+	put writeDataSet in superclass, as well as encoding info.
+
+2017-09-25 Riccardo Mottola <rm@gnu.org>
+
+	* DBCSVWriter.h
+	* DBCSVWriter.m
+	* DBFileWriter.h
+	* DBFileWriter.m
 	Put writeOrder in super class
 
 2017-09-25 Riccardo Mottola <rm@gnu.org>
